# Lab2OOP

./: CMakeLists.txt  main.c
Domain/: tranzactie.c  tranzactie.h
Repository/: repo.c  repo.h
Service/: service.c  service.h
Structure/: vectordinamic.c  vectordinamic.h
Tests/: test_domain.c  test_repo.c  test_service.c  test_structure.c
UI/: ui.c  ui.h
Validator/: validator_tranzactie.c  validator_tranzactie.h
